--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-.pio
-
 # globs
 Makefile.in
 *.userprefs
@@ -27,6 +25,8 @@ test-results/
 # Icon must end with two \r
 Icon
 
+# PlatformIO
+.pio
 
 # Thumbnails
 ._*
